# substreams-notify.world

./: .gitignore  Cargo.toml  Makefile  build.rs  substreams.yaml
abi/: notify.world.abi.json
proto/v1/: notify.world.proto
src/: lib.rs  maps.rs  sinks.rs  utils.rs
src/abi/: mod.rs  notify_world_abi.rs
src/pb/: antelope.notify.world.v1.rs  mod.rs  sf.substreams.sink.files.v1.rs
